openAPIを修正
